<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_name"
                android:inputType="text"
                android:enabled="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_data"
                android:inputType="text|datetime"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_from"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_to"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_purpose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_purpose"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/order_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_comment"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/order_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>
</LinearLayout>